# synopsis

./: README.md  api.http
.devcontainer/: devcontainer.json
synopsis-service/: Cargo.toml  Dockerfile
synopsis-service/src/: api.rs  main.rs  summarizer.rs
